# mirte-master-tube_nmpc

./: .gitignore  README.md
A-MATLAB/: Disturbance_Estimate.m  Model_Validation.m  README.md  SINDYc.m  TVRegDiff.m  Tube_NMPC.m  training_data.csv  validation_const_rect.csv  validation_turn_rect.csv
B-Tube-NMPC_Deployment/: README.md
B-Tube-NMPC_Deployment/baseline_controller/: CMakeLists.txt  package.xml  run_tube_mpc.sh
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/: Makefile  acados_sim_solver_mirte.h  acados_solver_mirte.h  main_sim_mirte.c
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/c_generated_code/: acados_sim_solver_mirte.c
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/c_generated_code/mirte_cost/: mirte_cost.h  mirte_cost_y_0_hess.c  mirte_cost_y_e_hess.c  mirte_cost_y_fun_jac_ut_xt.c  mirte_cost_y_hess.c
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/c_generated_code/mirte_model/: mirte_expl_ode_fun.c  mirte_expl_ode_hess.c  mirte_expl_vde_forw.c
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/mirte_cost/: mirte_cost_y_0_fun.c  mirte_cost_y_0_fun_jac_ut_xt.c  mirte_cost_y_e_fun.c  mirte_cost_y_hess.c
B-Tube-NMPC_Deployment/baseline_controller/c_generated_code/mirte_model/: mirte_expl_ode_hess.c  mirte_expl_vde_forw.c
B-Tube-NMPC_Deployment/baseline_controller/include/: acados_interface.h  tube_nmpc.h
B-Tube-NMPC_Deployment/baseline_controller/src/: acados_interface.cpp  main.cpp  stop_motors.sh  tube_nmpc.cpp
B-Tube-NMPC_Deployment/control/: CMakeLists.txt  acados_ocp.json  run_tube_mpc.sh
B-Tube-NMPC_Deployment/control/c_generated_code/: acados_ocp.json  acados_sim_solver_mirte.c  acados_solver_mirte.c  main_mirte.c
B-Tube-NMPC_Deployment/control/c_generated_code/c_generated_code/: Makefile  acados_sim_solver_mirte.h  acados_solver.pxd  acados_solver_mirte.c  acados_solver_mirte.h  main_mirte.c  main_sim_mirte.c
B-Tube-NMPC_Deployment/control/c_generated_code/c_generated_code/mirte_cost/: mirte_cost_y_0_fun.c  mirte_cost_y_0_fun_jac_ut_xt.c  mirte_cost_y_e_fun.c  mirte_cost_y_e_fun_jac_ut_xt.c  mirte_cost_y_fun.c
B-Tube-NMPC_Deployment/control/c_generated_code/c_generated_code/mirte_model/: mirte_expl_vde_adj.c  mirte_model.h
B-Tube-NMPC_Deployment/control/c_generated_code/mirte_cost/: mirte_cost.h  mirte_cost_y_0_hess.c  mirte_cost_y_e_fun_jac_ut_xt.c  mirte_cost_y_e_hess.c  mirte_cost_y_fun.c  mirte_cost_y_fun_jac_ut_xt.c
B-Tube-NMPC_Deployment/control/c_generated_code/mirte_model/: mirte_expl_ode_fun.c  mirte_expl_ode_hess.c  mirte_expl_vde_adj.c  mirte_model.h
B-Tube-NMPC_Deployment/control/include/: acados_interface.h  tube_nmpc.h
B-Tube-NMPC_Deployment/control/src/: acados_interface.cpp  generate_ocp.py  log_results.py  tube_nmpc.cpp
B-Tube-NMPC_Deployment/generate_data/: generate_training_data.py  generate_validation_data.py  log_data.py  stop_wheels.py
docs/: index.html
